[workspace]
resolver = "3"
members = [ "futures-core", "futures-combinators", "futures-compat", "futures-derive", "futures-util"]

[workspace.package]
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Asa Paparo <asapaparo@gmail.com>"]
repository = "https://github.com/AngleSideAngle/bcsc"
homepage = "https://github.com/AngleSideAngle/bcsc"

