[package]
name = "futures-combinators"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
futures-core = { path = "../futures-core" }
futures-util = { path = "../futures-util" }
