[package]
name = "futures-compat"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
futures-core = { workspace = true }
lifetime-guard = { workspace = true }
