[package]
name = "futures"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
futures-combinators = { workspace = true }
futures-compat  = { workspace = true }
futures-derive  = { workspace = true }
futures-util  = { workspace = true }
