[package]
name = "lifetime-guard"
keywords = [ "weak_ptr", "value_guard", "no_std" ]
categories = [ "data-structures", "no-std::no-alloc" ]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
